[TS/JO] - JUSC-424 - update UI lib version to 0.1.25

--- a/app.env
+++ b/app.env
@@ -2,4 +2,4 @@ NODE_ENV=development
 TL_USER=uSERnAME
 TL_PASSWORD=pASSwORD
 BM_PORT=3000
-BM_MONGODB_URI=mongodb://db/app-dev
+BM_MONGODB_URI=mongodb://db:27017/app-dev
